# llm-dispatcher

./: .coveragerc  .flake8  .gitignore  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  QUALITY_BENCHMARKS_SUMMARY.md  README.md  SETUP_GUIDE.md  USAGE_GUIDE.md  codecov.yml  example_usage.py  minimal_test.py  mkdocs.yml  pyproject.toml  requirements.txt  run_tests.py  setup.py  simple_test.py  test_openai.py  test_quality_benchmarks.py
.github/workflows/: ci.yml  coverage.yml
docs/: README.md  build.sh  deploy.sh  requirements.txt
docs/about/: license.md
docs/benchmarks/: quality_implementation.md
docs/development/: building.md  changelog.md  contributing.md  roadmap.md  security.md  testing.md
docs/user-guide/: troubleshooting.md
scripts/: publish.py  test_codecov.py  update_coverage_badge.py
src/llm_dispatcher/: __init__.py  exceptions.py
src/llm_dispatcher/benchmarks/: __init__.py  analysis.py  benchmark_analyzer.py  benchmark_reporter.py  benchmark_runner.py  cost_benchmark.py  custom_benchmark.py  evaluation.py  performance_benchmark.py  quality_benchmark.py  reports.py  utils.py
src/llm_dispatcher/benchmarks/utils/: __init__.py
src/llm_dispatcher/caching/: __init__.py  cache_manager.py  semantic_cache.py
src/llm_dispatcher/config/: __init__.py  config_loader.py  settings.py
src/llm_dispatcher/core/: __init__.py  base.py  switch_engine.py
src/llm_dispatcher/decorators/: __init__.py  switch_decorator.py
src/llm_dispatcher/enterprise/: __init__.py
src/llm_dispatcher/ml/: __init__.py  routing_optimizer.py
src/llm_dispatcher/monitoring/: __init__.py  alerting.py  analytics.py  dashboard.py  metrics_collector.py
src/llm_dispatcher/multimodal/: __init__.py  audio_processor.py  image_processor.py  media_validator.py  multimodal_analyzer.py
src/llm_dispatcher/providers/: __init__.py  anthropic_provider.py  base_provider.py  google_provider.py  grok_provider.py  openai_provider.py
src/llm_dispatcher/utils/: benchmark_manager.py  cost_calculator.py  performance_monitor.py  task_classifier.py  token_counter.py
tests/: conftest.py  test_anthropic_provider.py  test_basic.py  test_benchmark_fixtures.py  test_benchmark_integration.py  test_benchmark_performance.py  test_benchmark_utils.py  test_benchmarks.py  test_core_switching.py  test_environment.py  test_exceptions.py  test_google_provider.py  test_grok_provider.py  test_integration.py  test_multimodal.py  test_openai_examples.py  test_openai_provider.py  test_performance.py  test_provider_exception_usage.py
