[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-dispatcher"
version = "0.1.0"
description = "Intelligent LLM dispatching with performance-based routing, multimodal support, streaming, monitoring, and comprehensive analytics"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "ashhadahsan", email = "ashhadahsan@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
requires-python = ">=3.8"
keywords = [
    "llm",
    "ai",
    "openai",
    "anthropic",
    "google",
    "machine-learning",
    "nlp",
    "routing",
    "dispatch",
    "multimodal",
    "streaming",
    "monitoring",
    "analytics",
    "caching",
]
dependencies = [
    # Core: required for `import llm_dispatcher` to work.
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "anthropic>=0.7.0",
    "google-generativeai>=0.3.0",
    "requests>=2.31.0",
    "tiktoken>=0.5.0",
    "numpy>=1.21.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
# Image processing (multimodal.image_processor)
image = [
    "pillow>=9.0.0",
]
# Audio processing (multimodal.audio_processor, multimodal.media_validator)
audio = [
    "librosa>=0.9.0",
    "soundfile>=0.12.0",
    "pydub>=0.25.0",
]
multimodal = [
    "llm-dispatcher[image,audio]",
]
# Semantic similarity caching (caching.semantic_cache)
semantic-cache = [
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.4",
]
# Quality evaluation pipelines (benchmarks.quality_benchmark, benchmarks.evaluation)
evaluation = [
    "ragas>=0.1.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langchain-google-genai>=0.1.0",
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.3.0",
    "datasets>=2.0.0",
]
# Chart/HTML report generation (benchmarks.reports)
reports = [
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
]
# Local benchmarking with HF models
benchmark = [
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "accelerate>=0.20.0",
    "datasets>=2.0.0",
    "evaluate>=0.4.0",
]
# Convenience: install everything
all = [
    "llm-dispatcher[multimodal,semantic-cache,evaluation,reports,benchmark]",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocs-minify-plugin>=0.7.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "mkdocs-social-plugin>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/ashhadahsan/llm-dispatcher"
Repository = "https://github.com/ashhadahsan/llm-dispatcher"
Documentation = "https://llm-dispatcher.readthedocs.io"
"Bug Tracker" = "https://github.com/ashhadahsan/llm-dispatcher/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true
follow_imports = "silent"
follow_imports_for_stubs = false
# Internal mypy bug crashes when serializing namedtuple-from-dict in benchmarks/utils.
# Disable cache writes; cost is rebuild time, gain is no spurious AssertionError.
cache_dir = "/dev/null"
exclude = [
    "build/",
    "dist/",
    "site/",
    "tests/",
    "examples/",
    ".venv/",
    "venv/",
    # Type debt — enforce after incremental cleanup.
    "src/llm_dispatcher/benchmarks/",
    "src/llm_dispatcher/monitoring/",
    "src/llm_dispatcher/multimodal/",
    "src/llm_dispatcher/caching/",
]

# Don't deep-parse third-party packages — many use 3.9+ syntax that breaks
# our 3.8-targeted type-check pass.
[[tool.mypy.overrides]]
module = [
    "yaml",
    "yaml.*",
    "openai",
    "openai.*",
    "anthropic",
    "anthropic.*",
    "google.*",
    "tiktoken",
    "tiktoken.*",
    "numpy",
    "numpy.*",
    "PIL",
    "PIL.*",
    "sentence_transformers",
    "sentence_transformers.*",
    "faiss",
    "librosa",
    "soundfile",
    "pydub",
    "pydub.*",
    "matplotlib.*",
    "seaborn",
    "plotly.*",
    "ragas",
    "ragas.*",
    "langchain",
    "langchain.*",
    "langchain_openai",
    "langchain_anthropic",
    "langchain_google_genai",
    "datasets",
    "sklearn",
    "sklearn.*",
    "transformers",
    "transformers.*",
    "torch",
    "torch.*",
]
ignore_missing_imports = true
follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=llm_dispatcher --cov-report=html --cov-report=term-missing --cov-report=xml"
asyncio_mode = "auto"
markers = [
    "integration: tests that hit real provider APIs (require credentials, billing)",
    "slow: long-running performance/stress tests",
]

[tool.coverage.run]
source = ["src/llm_dispatcher"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
